--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "biome check . --organize-imports-enabled=false",
     "preview": "vite preview",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "test:e2e:ui": "playwright test --headed"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@playwright/test": "^1.51.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.13.15",
